--- a/index.html
+++ b/index.html
@@ -1,6 +1,82 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
+<head>
+    <title>Martin Vojík Personal Web</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <style>
+        .affix {
+            top: 0;
+            width: 100%;
+        }
+
+        .affix + .container-fluid {
+            padding-top: 70px;
+        }
+
+        /*@media (max-width: 300px) {
+            body {min-width:300px;}
+        }*/
+    </style>
+</head>
 <body>
-<h1>welcom to homepage of wbq</h1>
+
+    <header class="container-fluid" style="background-color:#F44336;color:#fff;height:200px;">
+        <h1>Bootstrap Affix Example</h1>
+        <h3>Fixed (sticky) navbar on scroll, using jQuery</h3>
+        <p>Scroll this page to see how the navbar behaves.</p>
+        <p>The navbar is attached to the top of the page after you have scrolled passed the header element.</p>
+    </header>
+
+    <nav class="navbar navbar-inverse" style="z-index: 99999">
+        <ul class="nav navbar-nav" id="menuRoot">
+            <li id="navHome"><a href="#" onclick="redirectTo('Home', 'navHome')">Home</a></li>
+
+            <li id ="navMyProject" class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    My Projects
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu" id="nva">
+                    <li><a href="#" onclick="redirectTo('MyCNCMachine','navMyProject')">My CNC machine</a></li>
+                    <li><a href="#" onclick="redirectTo('Arduino','navMyProject')">Arduino programming</a></li>
+                    <li><a href="#" onclick="redirectTo('DevelopmentTools','navMyProject')">Development tools</a></li>
+                    <li><a href="#" onclick="redirectTo('LoremIpsum','navMyProject')">Web design</a></li>
+                </ul>
+            </li>
+
+            <li class="dropdown" id="navMyWork">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    My Work
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="#" onclick="redirectTo('TestjQuery','navMyWork')">Testing jQuery</a></li>
+                    <li><a href="#">Submenu 1-2</a></li>
+                    <li><a href="#">Submenu 1-3</a></li>
+                </ul>
+            </li>
+
+            <li id="navAboutMe"><a href="#" onclick="redirectTo('AboutMe','navAboutMe')">About</a></li>
+
+            <li id="navContactMe"><a href="#" onclick="redirectTo('ContactMe','navContactMe')">Contact</a></li>
+        </ul>
+    </nav>
+
+<!--Main content-->
+<div class="container-fluid" id="documentContent"></div>
+
+<script src="MyScripts/Router.js"></script>
+<script>
+    $(document).ready(function() {
+        /* affix the navbar after scroll below header */
+        $(".navbar").affix({ offset: { top: $("header").outerHeight(true) } });
+    });
+</script>
+
 </body>
 </html>
+
