--- a/ContactMe.html
+++ b/ContactMe.html
@@ -1,17 +1,5 @@
 ﻿<h1>Contact Me</h1>
 <div class="row">
-    <div class="col-xs-4">Test TestTest</div>
-    <div class="col-xs-4">Test TestTest</div>
-    <div class="col-xs-4">Test TestTest</div>
+    <div class="col-xs-4">Email:binqiang2wang@qq.com</div>  
 </div>
 
-<div class="row">
-    <div class="col-xs-2">Analytical skills</div>
-    <div class="col-xs-2">
-        <div class="progress">
-            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                Expert
-            </div>
-        </div>
-    </div>
-</div>
