--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Martin Vojík Personal Web</title>
+    <title>WBQ Personal Web</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -25,10 +25,6 @@
 <body>
 
     <header class="container-fluid" style="background-color:#F44336;color:#fff;height:200px;">
-        <h1>Bootstrap Affix Example</h1>
-        <h3>Fixed (sticky) navbar on scroll, using jQuery</h3>
-        <p>Scroll this page to see how the navbar behaves.</p>
-        <p>The navbar is attached to the top of the page after you have scrolled passed the header element.</p>
     </header>
 
     <nav class="navbar navbar-inverse" style="z-index: 99999">
