--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <body>
 
     <header class="container-fluid" style="background-color:#F44336;color:#fff;height:200px;">
+      <img src = "op.jpg" alt = "one piece">
     </header>
 
     <nav class="navbar navbar-inverse" style="z-index: 99999">
