--- a/AboutMe.html
+++ b/AboutMe.html
@@ -11,7 +11,7 @@
                     <div class="col-xs-1">&nbsp;</div>
                     <div class="col-xs-3">Name:</div>
                     <div class="col-xs-8">
-                        <strong></strong>
+                        <strong>Binqiang</strong>
                     </div>
                 </div>
                 <div class="row">
