--- a/index.html
+++ b/index.html
@@ -80,13 +80,12 @@
                     <br> <br>
                 </div>
                 <div class="col-md-3 panel">
-                    <img src="WBQ.jpg" width="20%" height="20%">
+                    <img src="WBQ.jpg" width="10%" height="10%">
                     <!-- <img src="./img/profilepic.jpg" width="100%" class="front card"> -->
                     <!-- <img src="./img/IMG_0517_4.png" width="100%" class="back card text-center"> -->
                 </div>
                 <div class="col-md-9">
-                    <p class="text-muted">I am a second-year PhD student at <a target="_blank" href="http://www.opt.ac.cn/"> Xi'an Institute of Optics and Precision Mechanics,Chinese Academy of Sciences </a>, <a target="_blank" href="https://www.scs.cmu.edu/">University of Chinese Academy of Sciences </a>. <br> <br> My research goal is to develop deep learning models for machine learning. <br> I am working with Professor <a target="_blank" href="http://ygxy.rsgis.whu.edu.cn/973web/people_luxiaoqiang.asp">X.Q. Lu</a>. <br> <br> You can contact me through binqiang2wang@qq.com.
-                    <!-- <br> <br> I am the drummer and co-founder of <a target="_blank" href="http://zrfanzy.github.io/splay/">Splay</a>, a band named after a <a target="_blank" href="http://en.wikipedia.org/wiki/Splay_tree">data structure</a>.  -->
+                    <p class="text-muted">I am currently working toward the Ph.D. degree in signal and information processing in the Center for OPTical IMagery Analysis and Learning (OPTIMAL), <a target="_blank" href="http://www.opt.ac.cn/"> Xi'an Institute of Optics and Precision Mechanics, Chinese Academy of Sciences, Xi'an, Shaanxi, P. R. China. PS: also a menber of </a>, <a target="_blank" href="https://www.scs.cmu.edu/">University of Chinese Academy of Sciences </a>. <br> <br> My research goal is to develop deep learning models for machine learning, pattern recognition, computer vision. <br> I am working with Professor <a target="_blank" href="http://ygxy.rsgis.whu.edu.cn/973web/people_luxiaoqiang.asp">X.Q. Lu</a>. <br> <br> You can contact me through binqiang2wang@qq.com.
                     </p>
                 </div>
             </div>
