remove a dot in the top

--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a target="_blank" href="#page-top"></a>
-                    </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
@@ -85,7 +82,7 @@
                     <!-- <img src="./img/IMG_0517_4.png" width="100%" class="back card text-center"> -->
                 </div>
                 <div class="col-md-9">
-                    <p class="text-muted">I am currently working toward the Ph.D. degree in signal and information processing in the Center for OPTical IMagery Analysis and Learning (OPTIMAL), <a target="_blank" href="http://www.opt.ac.cn/"> Xi'an Institute of Optics and Precision Mechanics, Chinese Academy of Sciences, Xi'an, Shaanxi, P. R. China. PS: also a menber of </a>, <a target="_blank" href="https://www.scs.cmu.edu/">University of Chinese Academy of Sciences </a>. <br> <br> My research goal is to develop deep learning models for machine learning, pattern recognition, computer vision. <br> I am working with Professor <a target="_blank" href="http://ygxy.rsgis.whu.edu.cn/973web/people_luxiaoqiang.asp">X.Q. Lu</a>. <br> <br> You can contact me through binqiang2wang@qq.com.
+                    <p class="text-muted">I am currently working toward the Ph.D. degree in signal and information processing in the Center for OPTical IMagery Analysis and Learning (OPTIMAL), <a target="_blank" href="http://www.opt.ac.cn/"> Xi'an Institute of Optics and Precision Mechanics, Chinese Academy of Sciences, Xi'an, Shaanxi, P. R. China. </a>, also a menber of <a target="_blank" href="https://www.scs.cmu.edu/">University of Chinese Academy of Sciences </a>. <br> <br> My research goal is to develop deep learning models for machine learning, pattern recognition, computer vision. <br> I am working with Professor <a target="_blank" href="http://ygxy.rsgis.whu.edu.cn/973web/people_luxiaoqiang.asp">X.Q. Lu</a>. <br> <br> You can contact me through binqiang2wang@qq.com.
                     </p>
                 </div>
             </div>
