--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <br> <br>
                 </div>
                 <div class="col-md-3 panel">
-                    <img src="WBQ.jpg" width="10%" height="10%">
+                    <img src="./pic/wang.jpg" width="96" height="128">
                     <!-- <img src="./img/profilepic.jpg" width="100%" class="front card"> -->
                     <!-- <img src="./img/IMG_0517_4.png" width="100%" class="back card text-center"> -->
                 </div>
