--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
                 </div>
                  <div class="col-lg-12">
                     <h2 class="section-subheading text-muted">Exploring Models and Data for Remote Sensing Image Caption Generation</h2>
+									    <img src="./pic/exploring.PNG" width="519" height="230">
+                    <a target="_blank" href="./papers/TGRS-2017-00767.pdf">[pdf]</a>
                 </div>
-                <div class="col-md-12">
-                    <a target="_blank" href="./papers/TGRS-2017-00767.pdf">pdf</a>
-                </div>
+
             </div>        
         </div>
     </section>
